<resources>
    <string name="app_name">FindWork</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="title_activity_man">ManActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settting_log_out">退出登录</string>
    <string name="FloatingActionButton_work">招聘</string>
    <string name="FloatingActionButton_man">求职</string>
    <string name="menu_all">全部</string>
    <string name="menu_work">工作</string>
    <string name="menu_man">人才</string>
    <string name="menu_like">收藏</string>
    <string name="menu_system">系统</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="com_em_title">招聘</string>
    <string name="com_em_push">发布</string>
    <string name="com_em_hope_posotion">理想职位</string>
    <string name="com_em_pay">理想薪资</string>
    <string name="com_em_sex">性别</string>
    <string name="com_em_location">理想工作地点</string>
    <string name="com_em_linkman">联系人</string>
    <string name="com_em_phone">联系电话</string>
    <string name="com_em_tx_introduce">介绍：</string>
    <string name="com_em_introduce">自我介绍</string>
    <string name="com_em_tx_content">内容：</string>
    <string name="com_em_content">理想工作内容</string>
    <string name="com_em_tx_required">要求：</string>
    <string name="com_em_required">个人要求</string>
    <string name="com_work_title">招聘</string>
    <string name="com_work_push">发布</string>
    <string name="com_work_posotion">职位</string>
    <string name="com_work_pay">薪资</string>
    <string name="com_work_sex">性别要求</string>
    <string name="com_work_location">工作地点</string>
    <string name="com_work_linkman">联系人</string>
    <string name="com_work_phone">联系电话</string>
    <string name="com_work_tx_introduce">介绍：</string>
    <string name="com_work_introduce">公司介绍</string>
    <string name="com_work_tx_content">内容：</string>
    <string name="com_work_content">工作内容</string>
    <string name="com_work_tx_required">要求：</string>
    <string name="com_work_required">工作要求</string>
    <string name="lan_ac_tile">语言</string>
    <string name="lan_ac_zh">中文</string>
    <string name="lan_ac_en">英文</string>
    <string name="lan_ac_change">更改</string>
    <string name="lan_login_tile">登录</string>
    <string name="lan_login_register">注册</string>
    <string name="lan_login_phone">手机号</string>
    <string name="lan_login_key">密码</string>
    <string name="lan_login_login">登录</string>
    <string name="lan_login_skip">随便看看</string>
    <string name="per_name_tile">昵称</string>
    <string name="per_name_save">完成</string>
    <string name="per_name">昵称</string>
    <string name="per_tile">个人信息</string>
    <string name="per_save">完成</string>
    <string name="per_phone_tile">电话</string>
    <string name="per_phone_save">完成</string>
    <string name="per_phone">电话</string>
    <string name="register_tile">注册</string>
    <string name="register_login">登录</string>
    <string name="register_phone">电话</string>
    <string name="register_code">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_key">密码</string>
    <string name="register_key_two">密码</string>
    <string name="register_singin">注册</string>
    <string name="seting_tile">设置</string>
</resources>