<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qb.findwork.activity.CompileWorkActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/compile_work_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_left_white_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/com_work_title"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/com_work_push"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:id="@+id/work_push"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Relat_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/item_selector">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_person_pin_black_24dp" />

            <EditText
                android:id="@+id/compile_work_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="53dp"
                android:background="#ffffff"
                android:hint="@string/com_work_posotion"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Relat_pay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/item_selector">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_local_atm_black_24dp" />

            <EditText
                android:id="@+id/compile_work_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="53dp"
                android:background="#ffffff"
                android:hint="@string/com_work_pay"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_work_sex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/item_selector">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_wc_black_24dp" />

            <EditText
                android:id="@+id/compile_work_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="53dp"
                android:background="#ffffff"
                android:hint="@string/com_work_sex"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_work_location"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/item_selector">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_place_black_24dp" />

            <EditText
                android:id="@+id/compile_work_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="53dp"
                android:background="#ffffff"
                android:hint="@string/com_work_location"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/Relat_work_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/item_selector">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_phone_iphone_black_24dp" />

            <EditText
                android:id="@+id/compile_work_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="53dp"
                android:background="#ffffff"
                android:hint="@string/com_work_phone"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_work_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_work_more_title_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/com_work_tx_introduce"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/compile_tv_work_more_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_work_more_title_introduce"
                android:layout_toEndOf="@+id/tv_work_more_title_introduce"
                android:layout_toRightOf="@+id/tv_work_more_title_introduce"
                android:background="#ffffff"
                android:gravity="top"
                android:hint="@string/com_work_introduce"
                android:lines="6"
                android:maxLength="80"
                android:maxLines="7"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_work_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_work_more_title_contente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/com_work_tx_content"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/compile_tv_work_more_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_work_more_title_contente"
                android:layout_toEndOf="@+id/tv_work_more_title_contente"
                android:layout_toRightOf="@+id/tv_work_more_title_contente"
                android:background="#ffffff"
                android:gravity="top"
                android:hint="@string/com_work_content"
                android:lines="6"
                android:maxLength="80"
                android:maxLines="7"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_work_required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_work_more_title_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/com_work_tx_required"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/compile_tv_work_more_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_work_more_title_required"
                android:layout_toEndOf="@+id/tv_work_more_title_required"
                android:layout_toRightOf="@+id/tv_work_more_title_required"
                android:background="#ffffff"
                android:gravity="top"
                android:hint="@string/com_work_required"
                android:lines="6"
                android:maxLength="80"
                android:maxLines="7"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="45dp"
                android:background="@color/line_color" />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
